--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="stylesheet"
-      href="App.css"
+      href="App.css?v=1.031"
     />
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
@@ -25,15 +25,15 @@
     
     <div class="" id="root">
         <div id="App">
-            <div id="homepageContainer" class="slideLeft">
-                <div style="width: 100%; height: 100%;" class="react-player">
-                    <!--iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe-->
-                    <div style="padding:56.25% 0 0 0;position:relative;">
-                        <iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-                    </div>
-                    <script src="https://player.vimeo.com/api/player.js"></script>
+            <div id="bgPlayer">
+                <!--iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe-->
+                <!--div id="bgIframe" style="padding:56.25% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
-                <div id="homepage" class="slideLeft">
+                <script src="https://player.vimeo.com/api/player.js"></script-->
+            </div>
+            <div id="homepageContainer" class="slideLeft">
+                <div id="homepage">
                     <div id="navmenu" class="slideUp">
                         <ul>
                             <li><div id="aboutmeNavBar" onclick="aboutmeOpen();">About Me</div></li>
@@ -41,13 +41,14 @@
                             <li><div id="portfolioNavBar" onclick="portfolioOpen();">Portfolio</div></li>
                         </ul>
                     </div>
-                    <div id="nameBox" class="">C. Brent Mooney</div>
+                    <div id="nameBoxFade">C. Brent Mooney</div>
+                    <div id="nameBox">C. Brent Mooney</div>
                     <div id="blinking">true</div>
                 </div>
             </div>
 
             <div id="aboutme" class="slideOut">
-                <div id="aboutmeCloseButton" onclick="whichClose('aboutme');">X</div>
+                <div class="closeButton" onclick="whichClose('aboutme');">X</div>
                 <div id="aboutmeContents">
                     <h2>About Me</h2>
                     <p>Ipsum molestiae natus adipisci modi eligendi? Debitis amet quae unde commodi aspernatur enim, consectetur. Cumque deleniti temporibus ipsam atque a dolores quisquam quisquam adipisci possimus laboriosam. Quibusdam facilis doloribus debitis! Sit quasi quod accusamus eos quod. Ab quos consequuntur eaque quo rem! Mollitia reiciendis porro quo magni incidunt dolore amet atque facilis ipsum deleniti rem!</p>
@@ -61,7 +62,7 @@
             <div id="aboutmePic" class="slideOut"></div>
 
             <div id="services" class="slideOut">
-                <div id="servicesCloseButton" onclick="whichClose('services');">X</div>
+                <div class="closeButton" onclick="whichClose('services');">X</div>
                 <div id="servicesContents">
                     <h2>Services</h2>
                     <p>Ipsum molestiae natus adipisci modi eligendi? Debitis amet quae unde commodi aspernatur enim, consectetur. Cumque deleniti temporibus ipsam atque a dolores quisquam quisquam adipisci possimus laboriosam. Quibusdam facilis doloribus debitis! Sit quasi quod accusamus eos quod. Ab quos consequuntur eaque quo rem! Mollitia reiciendis porro quo magni incidunt dolore amet atque facilis ipsum deleniti rem!</p>
@@ -69,7 +70,7 @@
             </div>
 
             <div id="portfolio" class="slideOut">
-                <div id="portfolioCloseButton" onclick="whichClose('portfolio');">X</div>
+                <div class="closeButton" onclick="whichClose('portfolio');">X</div>
                 <div id="portfolioContents" class="scrollable">
                     <h2>Portfolio</h2>
                     <div id="pfilter">
@@ -127,6 +128,6 @@
         </div>
     </div>
     <!-- Scripts -->
-    <script src='index.js'></script>
+    <script src='index.js?v=1.01'></script>
   </body>
 </html>
