--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
       href="App.css?v=1.031"
     />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>C. Brent Mooney</title>
   </head>
   <body>
     
     <div class="" id="root">
+        <div id="emailModal">
+            <div class="modalBody">Body</div>
+            <div class="modalFooter">Footer</div>
+        </div>
         <div id="App">
             <div id="bgPlayer">
                 <!--iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe-->
-                <!--div id="bgIframe" style="padding:56.25% 0 0 0;position:relative;">
+                <div id="bgIframe">
                     <iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
-                <script src="https://player.vimeo.com/api/player.js"></script-->
+                <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <div id="homepageContainer" class="slideLeft">
                 <div id="homepage">
@@ -49,13 +53,15 @@
 
             <div id="aboutme" class="slideOut">
                 <div class="closeButton" onclick="whichClose('aboutme');">X</div>
+                
                 <div id="aboutmeContents">
                     <h2>About Me</h2>
                     <p>Ipsum molestiae natus adipisci modi eligendi? Debitis amet quae unde commodi aspernatur enim, consectetur. Cumque deleniti temporibus ipsam atque a dolores quisquam quisquam adipisci possimus laboriosam. Quibusdam facilis doloribus debitis! Sit quasi quod accusamus eos quod. Ab quos consequuntur eaque quo rem! Mollitia reiciendis porro quo magni incidunt dolore amet atque facilis ipsum deleniti rem!</p>
                     <div id="contactIcons">
                         <a href="//linkedin.com/in/c-brent-mooney-41400064" target="_blank" rel="nofollow"><i class="fab fa-linkedin"></i></a>
                         <a href="//vimeo.com/cbrentmooney" target="_blank" rel="nofollow"><i class="fab fa-vimeo"></i></a>
-                        <a href="mailto:manningha@gmail.com" target="_blank" rel="nofollow"><i class="far fa-envelope" aria-hidden="true"></i></a>
+                        <!--a href="mailto:manningha@gmail.com" target="_blank" rel="nofollow"><i class="far fa-envelope" aria-hidden="true"></i></a-->
+                        <a target="_blank" rel="nofollow" onclick="showEmailModal();" style="cursor:pointer;"><i class="far fa-envelope" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -79,49 +85,87 @@
                         <button type="button" class="btn btn-dark" id="filterShort" onclick="filter('short');">Short Film</button>
                         <button type="button" class="btn btn-dark" id="filterPhoto" onclick="filter('photo');">Photography</button>
                     </div>
-                    <div style="width: 100%; height: 58%;" class="react-player comm">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/67325367?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="Super Sync Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="640" height="360" frameborder="0"></iframe>
+                    <div id="pMedia">
+                        <div class="comm">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                    <iframe src="https://player.vimeo.com/video/67325367?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                    title="Super Sync Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                    width="100%" frameborder="0"></iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div style="width: 100%; height: 58%;" class="react-player short">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/67907078?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="SNY - More Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="480" height="270" frameborder="0"></iframe>
+                        <div class="short">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                    <iframe src="https://player.vimeo.com/video/67907078?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                    title="SNY - More Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                    width="100%" frameborder="0"></iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div style="width: 100%; height: 58%;" class="react-player photo">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/120757161?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="McDonald's Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="480" height="270" frameborder="0"></iframe>
+                        <div class="photo">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                    <iframe src="https://player.vimeo.com/video/120757161?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                    title="McDonald's Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                    width="100%" frameborder="0"></iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div style="width: 100%; height: 58%;" class="react-player comm">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/214726261?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="SPORTS" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="492" height="360" frameborder="0"></iframe>
+                        <div class="comm">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                    <iframe src="https://player.vimeo.com/video/214726261?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                    title="SPORTS" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                    width="100%" frameborder="0"></iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div style="width: 100%; height: 58%;" class="react-player short">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/120757161?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="McDonald's Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="480" height="270" frameborder="0">
-                            </iframe>
+                        <div class="short">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                    <iframe src="https://player.vimeo.com/video/120757161?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                    title="McDonald's Sports" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                    width="100%" frameborder="0">
+                                    </iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div style="width: 100%; height: 58%;" class="react-player photo">
-                        <div style="width: 100%; height: 100%; overflow: hidden; background-color: black;" data-vimeo-initialized="true">
-                            <iframe src="https://player.vimeo.com/video/214726261?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
-                            title="SPORTS" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
-                            style="width: 100%; height: 100%;" width="492" height="360" frameborder="0"></iframe>
+                        <div class="photo">
+                            <div class="holder">
+                                <div class="media" style="overflow: hidden;" data-vimeo-initialized="true">
+                                        <iframe src="https://player.vimeo.com/video/214726261?title=0&amp;byline=0&amp;portrait=0&amp;playsinline=0&amp;autopause=0&amp;app_id=122963" 
+                                        title="SPORTS" allow="autoplay; fullscreen" allowfullscreen="" data-ready="true" 
+                                        width="100%" frameborder="0"></iframe>
+                                </div>
+                                <div class="desc">
+                                    <b>Title</b>
+                                    <p>Description</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </div><!--End pMedia-->
                 </div>
             </div>
 
