--- a/index.html
+++ b/index.html
@@ -24,10 +24,45 @@
   <body>
     
     <div class="" id="root">
-        <div id="emailModal">
-            <div class="modalBody">Body</div>
-            <div class="modalFooter">Footer</div>
+        <!--div id="emailModal">
+            <div class="modalHeader">
+                <div class="modalTitle">Title</div>
+                <div class="modalClose" onclick="closeEmailModal();"><i class="fas fa-times"></i></div>
+            </div>
+            <div class="modalBody">
+                <input type="email" placeholder="Email" />
+                <textarea rows="10" cols="30" placeholder="Enter your message here"></textarea>
+            </div>
+        </div-->
+<div class="modal" tabindex="-1" role="dialog" id="emailModal">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title">Email Brent</h5>
+<button type="button" class="close" onclick="closeEmailModal();">
+<span aria-hidden="true">&times;</span>
+</button>
+</div>
+<div class="modal-body">
+    <form>
+        <div class="form-group">
+            <label for="emailAddress">Email address</label>
+            <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
+        <div class="form-group">
+            <label for="emailMessage">Message</label>
+            <textarea class="form-control" id="emailMessage" rows="5"></textarea>
+        </div>
+        <button class="btn btn-primary" onclick="emailMessage();">Submit</button>
+    </form>
+</div>
+<!--div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+<button type="button" class="btn btn-primary">Save changes</button>
+</div-->
+</div>
+</div>
+</div>
         <div id="App">
             <div id="bgPlayer">
                 <!--iframe src="https://player.vimeo.com/video/255828084?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0&controls=0&muted=1" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe-->
