--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
       href="App.css?v=1.031"
     />
+    <script
+    src="https://code.jquery.com/jquery-3.4.0.min.js"
+    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+    crossorigin="anonymous"></script>
     <meta name="theme-color" content="#000000" />
     <title>C. Brent Mooney</title>
   </head>
@@ -44,17 +48,21 @@
 </button>
 </div>
 <div class="modal-body">
-    <form>
+    <!--form-->
+        <div class="form-group">
+            <label for="emailName">Name</label>
+            <input type="text" class="form-control" id="emailName" placeholder="Enter your name">
+        </div>
         <div class="form-group">
             <label for="emailAddress">Email address</label>
-            <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" id="emailAddress" placeholder="Enter your email">
         </div>
         <div class="form-group">
             <label for="emailMessage">Message</label>
             <textarea class="form-control" id="emailMessage" rows="5"></textarea>
         </div>
         <button class="btn btn-primary" onclick="emailMessage();">Submit</button>
-    </form>
+    <!--/form-->
 </div>
 <!--div class="modal-footer">
 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -109,6 +117,7 @@
                     <p>Ipsum molestiae natus adipisci modi eligendi? Debitis amet quae unde commodi aspernatur enim, consectetur. Cumque deleniti temporibus ipsam atque a dolores quisquam quisquam adipisci possimus laboriosam. Quibusdam facilis doloribus debitis! Sit quasi quod accusamus eos quod. Ab quos consequuntur eaque quo rem! Mollitia reiciendis porro quo magni incidunt dolore amet atque facilis ipsum deleniti rem!</p>
                 </div>
             </div>
+            <div id="servicesPic" class="slideOut"></div>
 
             <div id="portfolio" class="slideOut">
                 <div class="closeButton" onclick="whichClose('portfolio');">X</div>
