--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
             </div>
 
             <div id="aboutme" class="slideOut">
+                <div class="sidenav">
+                    <button onclick="servicesOpen();">SERVICES</button>
+                    <button onclick="portfolioOpen();">PORTFOLIO</button>
+                </div>
                 <div class="closeButton" onclick="whichClose('aboutme');">X</div>
-                
                 <div id="aboutmeContents">
                     <h2>About Me</h2>
                     <p>Ipsum molestiae natus adipisci modi eligendi? Debitis amet quae unde commodi aspernatur enim, consectetur. Cumque deleniti temporibus ipsam atque a dolores quisquam quisquam adipisci possimus laboriosam. Quibusdam facilis doloribus debitis! Sit quasi quod accusamus eos quod. Ab quos consequuntur eaque quo rem! Mollitia reiciendis porro quo magni incidunt dolore amet atque facilis ipsum deleniti rem!</p>
@@ -111,6 +114,10 @@
             <div id="aboutmePic" class="slideOut"></div>
 
             <div id="services" class="slideOut">
+                <div class="sidenav">
+                    <button onclick="aboutmeOpen();">ABOUT ME</button>
+                    <button onclick="portfolioOpen();">PORTFOLIO</button>
+                </div>
                 <div class="closeButton" onclick="whichClose('services');">X</div>
                 <div id="servicesContents">
                     <h2>Services</h2>
@@ -120,6 +127,10 @@
             <div id="servicesPic" class="slideOut"></div>
 
             <div id="portfolio" class="slideOut">
+                <div class="sidenav">
+                    <button onclick="aboutmeOpen();">ABOUT ME</button>
+                    <button onclick="servicesOpen();">SERVICES</button>
+                </div>
                 <div class="closeButton" onclick="whichClose('portfolio');">X</div>
                 <div id="portfolioContents" class="scrollable">
                     <h2>Portfolio</h2>
